Fix FF issues related with widget sizes and map overflow

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -1,6 +1,7 @@
-@import '_variables.scss';
-@import 'map/map-manager.scss';
-@import 'widget/widget-manager.scss';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import '_variables';
+@import 'map/map-manager';
+@import 'widget/widget-manager';
 
 .geo-dashboard {
   font-family: $font-family-base;
@@ -32,6 +33,7 @@
   .content {
     flex: 1;
     display: flex;
+    min-height: 0;
   }
 
   .footer {
